Fixed header list overflowing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,7 +198,6 @@ p a {
     background-color: #151515;
     position: sticky;
     top: 0;
-    min-width: 700px;
     min-height: 50px;
     text-align: center;
     margin-left: auto;
